[package]
name = "ftc_http"
version = "2.0.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2018"
description = "Provides an interface to FTC OnBotJava from outside the browser."

[dependencies]
walkdir = "*"

[dependencies.clap]
git = "https://github.com/clap-rs/clap/"

[dependencies.reqwest]
git = "https://github.com/seanmonstar/reqwest.git"
default-features = false
features = ["blocking", "cookies", "gzip"]

[dependencies.confy]
git = "https://github.com/rust-cli/confy"

[dependencies.serde]
version = "*"
features = ["derive"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
