[package]
name = "ftc_http"
version = "2.2.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2021"
description = "Provides an interface to FTC OnBotJava from outside of the browser"
license = "LGPL-3.0"

[dependencies]
confy = "0.4"
lazy_static = "1"
regex = "1"
walkdir = "2"
url = "2"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "cookies", "gzip", "json", "multipart", "rustls-tls"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.structopt]
version = "0.3"
features = ["wrap_help"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
